finalizado exercicio aula3.1

--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
         <title>Gabriel Gonçalves</title>
     </head>
     <body>
-        <h1>GABRIEL RAEDER GONÇALVES <img src="eu.png" width="100px" id="foto"></h1>
+        <h1>Portfólio WEB</h1>
         <ul>
-            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#nome">Nome</a></li>
             <li><a href="#foto">Foto</a></li>
-            <li></li>
-            <li>Habildades</li>
-            <li>Linkedin</li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#habilidades">Habildades</a></li>
+            <li><a href="https://www.linkedin.com/in/gabrielraedergoncalves/" target="_blank">Linkedin</a></li>
         </ul>
-        
-        <p id="sobre">Nascido em 30 de maio de 1991, <br>Sou natural da cidade do Rio de Janeiro, Brasil. <br>Moro desde 1998 em Curitiba, no Paraná.</p>
-        
+        <hr>
+        <hr>
+        <img src="./imagens/eu.png" width="150px" id="foto" alt="Foto de Gabriel">
+        <h2>Gabriel Raeder Gonçalves</h2>
+        <hr>
+        <h4>Sobre:</h4>
+        <p id="sobre"> Nascido em 30 de maio de 1991, Sou natural da cidade do Rio de Janeiro, Brasil. Moro desde 1998 em Curitiba, no Paraná <br> Gastronomo de formação, tenho vasta experiencia com liderança em ambientes de restaurantes, <br> tendo liderado equipes em estabelecimentos de terceiros assim como por alguns anos no meu próprio negócio.</p>
+        <hr>
+        <h4 id="habilidades">Habilidades:</h4>
+        <ul>
+            <li>Graduação em Gastronomia</li>
+            <li>Pós-graduação em Gerenciamento Empresarial</li>
+            <li><strong>Cursando Desenvolvimento Web Full-stack <em>TRYBE</em></strong></li>
+        </ul>
 
 
 
