--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
         <hr>
         <hr>
-        <img src="./imagens/eu.png" width="150px" id="foto" alt="Foto de Gabriel">
+        <img src="profile.png" width="150px" id="foto" alt="Foto de Gabriel">
         <h2>Gabriel Raeder Gonçalves</h2>
         <hr>
         <h4>Sobre:</h4>
