--- a/index.html
+++ b/index.html
@@ -25,25 +25,34 @@
             text-decoration: line-through;
             text-decoration-color: #6D6A75;
         }
+        .button {
+            background-color: #363636;
+            font-size: large;
+            font-weight: 300;
+            line-height: 45px;
+            color: rgb(187, 187, 187);
+            text-decoration: none;
+            padding: 7px 15px;
+            border-radius: 4px;
+            transition: background-color 200ms ease;
+        }
         
-
-
     </style>
     </head>
     
     <body>
         <h1>Portfólio WEB</h1>
         <ul>
-            <li><a href="#nome">Nome</a></li>
-            <li><a href="#foto">Foto</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#habilidades">Habildades</a></li>
-            <li><a href="https://www.linkedin.com/in/gabrielraedergoncalves/" target="_blank">Linkedin</a></li>
-            <li><a href="https://github.com/gabrielraeder" target="_blank">GitHub</a></li>
+            <li><a href="#nome" class="button">Nome</a></li>
+            <li><a href="#foto" class="button">Foto</a></li>
+            <li><a href="#sobre" class="button">Sobre</a></li>
+            <li><a href="#habilidades" class="button">Habildades</a></li>
+            <li><a href="https://www.linkedin.com/in/gabrielraedergoncalves/" target="_blank" class="button">Linkedin</a></li>
+            <li><a href="https://github.com/gabrielraeder" target="_blank" class="button">GitHub</a></li>
         </ul>
         <hr>
         <hr>
-        <img src="profile.png" width="150px" id="foto" alt="Foto de Gabriel">
+        <img src="profile.png" width="175px" id="foto" alt="Foto de Gabriel" style="border-radius: 45%;">
         <h2 class="me">Gabriel Raeder Gonçalves</h2>
         <hr>
         <h4 class="me">Sobre:</h4>
